--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -708,12 +708,11 @@ navbar-nav .dropdown-menu {
   margin-left: 25px;
 }
 
-.experience-block:nth-child(1) {
+.experience-block:first-child {
   border-top-left-radius: 15px;
 }
 
-.experience-block:nth-child(6) {
-  // border-left-color: $themeRed;
+.experience-block:last-child {
   border-bottom-left-radius: 15px;
   margin-bottom: 25px;
 }
