style(theme): Add darkPurple color variable and refactor Experience component color order

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -25,6 +25,7 @@ $themeLavendarBlue: #40a9ff;
 $themeLightOrange: #ffe6a2;
 $themeOrange: #fcb045;
 $themePurple: #813db4;
+$themeDarkPurple: #59297d;
 $themeRed: #e63e3e;
 $themeTurquoise: #00e6ff;
 $themeVibrantYellowGreen: #f4fd5b;
@@ -37,6 +38,7 @@ $turquoiseLink: #00e6ff;
   --theme-green: #{$themeGreen};
   --theme-orange: #{$themeOrange};
   --theme-purple: #{$themePurple};
+  --theme-darkPurple: #{$themeDarkPurple};
   --theme-red: #{$themeRed};
   --theme-turquoise: #{$themeTurquoise};
   --theme-vibrant-yellow-green: #{$themeVibrantYellowGreen};
